Adjusted Team section to be responsive and avoid overlapping

--- a/src/home/home.component.css
+++ b/src/home/home.component.css
@@ -205,32 +205,33 @@ nav {
 } 
 
 #team {
-    height: 100vh;
-    padding: 60px 20px;
+    min-height: 100vh;
+    padding: 5% 2%;
+    margin-bottom: 5%;
 
     .team-section-header {
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 3%;
 
         h3 {
             font-family: 'Oswald', sans-serif;
             font-size: 3.5rem;
-            margin-bottom: 20px;
+            margin-bottom: 2%;
             color: var(--primary-color);
         }
     }
 
     .team-section-members {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 0 10px;
+        grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
+        gap: 2%;
+        padding: 0 1%;
 
         .team-member {
             background: #fff;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            padding: 20px;
+            padding: 3%;
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -244,19 +245,20 @@ nav {
             }
 
             .team-member-photo img {
-                width: 360px;
-                height: 360px;
+                width: 100%;
+                max-width: 360px; /* limita el ancho */
+                height: auto; 
                 object-fit: cover;
                 border: solid var(--light-color);
                 border-radius: 10%;
-                margin-bottom: 15px;
+                margin-bottom: 2%;
             }
 
             .team-member-title h4, h5 {
                 font-size: 1.5rem;
                 font-weight: 600;
                 color: #222;
-                margin-bottom: 10px;
+                margin-bottom: 2%;
             }
 
             .team-member-description p {
@@ -266,7 +268,7 @@ nav {
                 font-size: 1.2rem;
                 color: #555;
                 line-height: 1.4;
-                padding: 15px;
+                padding: 3%;
             }
         }
     }
